# money_tracing

./: .env  Cargo.toml  docker-compose.yaml
migrations/: 20230902030714_create_first_tables.sql  20230902042833_create_movement_table.sql
migrations/2023-09-01-032553_movement/: down.sql  up.sql
src/: cashflow.rs  main.rs  schema.rs
src/cashflow/: api.rs  model.rs  servicing.rs
src/cashflow/persistence/: model.rs
